fixed navbar height on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -43,38 +43,6 @@ nav ul li a:hover {
 }
 
 
-.active {
-  background-color: #4CAF50;
-}
-
-
-.form-search-box {
-  float: right;
-  margin-top: 12px;
-  margin-right: 10px;
-  border-radius:10px;
-  text-align: center;
-
-}
-.input-search-box {
-  height: 24px;
-  text-align: center;
-}
-
-.nav-cover {
-  width: 100%;
-  height: 200px;
-  background-image: url(../Images/header.jpg);
-  background-size: cover;
-  background-position: center center;
-}
-
-
-.font-italic{
-  font-style: italic;
-}
-
-
 form {
   float: right;
   padding: 0px 16px 0px 0px;
@@ -103,12 +71,39 @@ footer a:hover {
 }
 
 
+.active {
+  background-color: #4CAF50;
+}
 
-/* .maindiv {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-} */
+
+.form-search-box {
+  float: right;
+  margin-top: 12px;
+  margin-right: 10px;
+  border-radius:10px;
+  text-align: center;
+
+}
+
+
+.input-search-box {
+  height: 24px;
+  text-align: center;
+}
+
+
+.nav-cover {
+  width: 100%;
+  height: 200px;
+  background-image: url(../Images/header.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+
+.font-italic{
+  font-style: italic;
+}
 
 
 .shop
@@ -146,12 +141,23 @@ footer a:hover {
   background-color: #F3F3F3;
 }
 
+
 #sold-out {
   background-color:#E2252B;
   color: #fff;
 }
+
+
 .special-offer {
   animation: offer 1s alternate infinite;
+}
+
+
+@media screen and (max-width: 600px) {
+  .nav-cover {
+    width: 100%;
+    height: 100px;
+  }
 }
 
 @keyframes offer {
@@ -160,6 +166,7 @@ footer a:hover {
 }
 
 
+/* Footer class*/
 .fa-facebook {
   color:#3C5A99;
 }
@@ -171,10 +178,4 @@ footer a:hover {
 }
 .fa-telegram {
   color:#37BFFD;
-}
-
-.div-photo {
-  width: 500px;
-  height: 200px;
-  background-color: #35ace0;
 }
